[gd_scene load_steps=27 format=2]

[ext_resource path="res://RayCast2D.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Tilesheet/player1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tilesheet/player3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Tilesheet/player5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tilesheet/player2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Tilesheet/player4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tilesheet/glow.png" type="Texture" id=8]
[ext_resource path="res://UI.gd" type="Script" id=9]
[ext_resource path="res://Assets/Pixeled.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/steps.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Audio_Laser/phaseJump3.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio_Impact/impactWood_heavy_001.ogg" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 4 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "jumping",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "moving",
"speed": 7.0
} ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.696296, 1 )
colors = PoolColorArray( 6, 3, 0.5, 1, 6, 3, 0.5, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.278409 ), 0.0, 0.0, 0, 0, Vector2( 0.670886, 0.278409 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_align_y = true
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
angle_random = 1.0
scale = 0.2
scale_curve = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 10
use_mipmaps = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 10
use_mipmaps = true
font_data = ExtResource( 10 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483713
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="WeaponRaycast" type="RayCast2D" parent="."]
cast_to = Vector2( 200, 0 )
collision_mask = 65
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="WeaponRaycast"]

[node name="Line2D" type="Line2D" parent="WeaponRaycast"]
points = PoolVector2Array( 10, 0, 53, 0 )
width = 5.0
default_color = Color( 2, 0.25, 0.1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="CastingParticles" type="Particles2D" parent="WeaponRaycast"]
visible = false
emitting = false
amount = 20
lifetime = 0.2
process_material = SubResource( 7 )
texture = ExtResource( 8 )

[node name="CollisionParticles" type="Particles2D" parent="WeaponRaycast"]
emitting = false
amount = 12
lifetime = 0.15
process_material = SubResource( 8 )
texture = ExtResource( 8 )

[node name="BeamParticles" type="Particles2D" parent="WeaponRaycast"]
emitting = false
lifetime = 0.8
process_material = SubResource( 11 )
texture = ExtResource( 8 )

[node name="GroundRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="LeftRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -10, 0 )

[node name="RightRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="UI"]
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Label" parent="UI"]
margin_left = 80.0
margin_top = -140.0
margin_right = 252.0
margin_bottom = -81.0
custom_fonts/font = SubResource( 12 )
text = "LAST CHECKPOINT (R)
RESTART (F5)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckpointLabel" type="Label" parent="UI"]
visible = false
margin_left = -14.0
margin_top = -16.0
margin_right = 82.0
margin_bottom = 12.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 13 )
text = "CHECKPOINT"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI"]

[node name="WalkingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0
attenuation = 0.0507658

[node name="JumpingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0
attenuation = 0.0507658

[node name="ColorChanged" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -20.0
pitch_scale = 2.0
attenuation = 0.00285954
